--- a/product.html
+++ b/product.html
@@ -22,28 +22,28 @@
       <div class="container">
         <div class="header__content">
           <div class="header__start">
-            <a href="/" class="header__logo">
+            <a href="#" class="header__logo">
               <img src="./assets/images/logo.svg" alt="Egoist logo" />
             </a>
             <nav class="header__menu">
               <ul class="header__menu_list">
                 <li class="header__menu_item">
-                  <a class="header__menu_link" href="/">главная</a>
+                  <a class="header__menu_link" href="#">главная</a>
                 </li>
                 <li class="header__menu_item">
                   <a class="header__menu_link" href="./catalog.html">Каталог</a>
                 </li>
                 <li class="header__menu_item">
-                  <a class="header__menu_link" href="./about.html"
+                  <a class="header__menu_link" href="#"
                     >О компании</a
                   >
                 </li>
 
                 <li class="header__menu_item">
-                  <a class="header__menu_link" href="./blog.html">Блог</a>
+                  <a class="header__menu_link" href="#">Блог</a>
                 </li>
                 <li class="header__menu_item">
-                  <a class="header__menu_link" href="./contacts.html"
+                  <a class="header__menu_link" href="#"
                     >Контакты</a
                   >
                 </li>
@@ -58,11 +58,11 @@
             </div>
           </div>
           <div class="header__contact">
-            <a href="tel:+380676358676" class="header__contact_link">
+            <a href="https://t.me/+380676358676" target="_blank" class="header__contact_link">
               <img src="./assets/images/tg.svg" alt="" />
               <span>+38067 635 86 76</span>
             </a>
-            <a href="tel:+359878319198" class="header__contact_link">
+            <a href="https://wa.me/359878319198" target="_blank" class="header__contact_link">
               <img src="./assets/images/whatsapp.svg" alt="" />
               <span>+359 878 319 198</span>
             </a>
@@ -283,6 +283,7 @@
           </div>
         </div>
       </div>
+
       <div class="gallery-preview-wrap">
         <div class="container">
           <div class="gallery-preview-container">
@@ -420,7 +421,7 @@
             </div>
 
             <div class="object-btns">
-              <a class="object-link-calc" href="#">рассчитать платеж</a>
+              <a class="object-link-calc" href="#calculator">рассчитать платеж</a>
               <a class="object-link-form" href="#">заявка в 1 клик</a>
             </div>
           </div>
@@ -498,7 +499,7 @@
           referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
       </div> 
-     <div class="object-calc">
+     <div id="calculator" class="object-calc">
         <div class="container">
           <div class="object-about">
             <div class="object-about-title">Онлайн-калькулятор для рассчета платежа</div>
@@ -568,6 +569,9 @@
         </div>
       </div> 
   <div class="object-autor-wrap">
+    <div class="object-autor-wrap-before">
+  <img src="./assets/images/object-after.svg" alt="">
+    </div>
         <div class="container">
           <div class="object-autor-content">
             <div class="object-autor">
@@ -606,6 +610,9 @@
             </div>
           </div>
         </div>
+<div class="object-autor-wrap-after">
+  <img src="./assets/images/object-after.svg" alt="">
+</div>
       </div> 
      <div class="container">
         <div class="object-tags">
@@ -1080,21 +1087,21 @@
             <nav class="footer__menu">
               <ul class="footer__menu_list">
                 <li class="footer__menu_item">
-                  <a href="./index.html" class="footer__menu_link">главная</a>
+                  <a href="#" class="footer__menu_link">главная</a>
                 </li>
                 <li class="footer__menu_item">
                   <a href="./catalog.html" class="footer__menu_link">Каталог</a>
                 </li>
                 <li class="footer__menu_item">
-                  <a href="./about.html" class="footer__menu_link"
+                  <a href="#" class="footer__menu_link"
                     >О компании</a
                   >
                 </li>
                 <li class="footer__menu_item">
-                  <a href="./blog.html" class="footer__menu_link">Блог</a>
+                  <a href="#" class="footer__menu_link">Блог</a>
                 </li>
                 <li class="footer__menu_item">
-                  <a href="./contacts.html" class="footer__menu_link"
+                  <a href="#" class="footer__menu_link"
                     >Контакты</a
                   >
                 </li>
@@ -1103,17 +1110,17 @@
           </div>
           <div class="footer__column">
             <div class="footer__contacts">
-              <a href="tel:+380676358676">+38067 635 86 76</a>
-              <a href="tel:+359878319198">+359 878 319 198</a>
+              <a target="_blank" href="https://t.me/+380676358676">+38067 635 86 76</a>
+              <a target="_blank" href="https://wa.me/359878319198">+359 878 319 198</a>
             </div>
             <div class="footer__social">
-              <a href="#">
+              <a target="_blank" href="https://www.tiktok.com/@broker_vikki_dronova?_t=ZM-90sRCZQdnFT&_r=1">
                 <img
                   src="./assets/images/footer-tiktok.svg"
                   alt="tiktok link"
                 />
               </a>
-              <a href="#">
+              <a target="_blank" href="https://www.instagram.com/vikki_brokerinbulgaria?igsh=ZzRiNTN0Y3J5Nm9o">
                 <img
                   src="./assets/images/footer-instagram.svg"
                   alt="instagram link"
@@ -1125,7 +1132,7 @@
                   alt="facebook link"
                 />
               </a>
-              <a href="#">
+              <a target="_blank" href="https://t.me/Vikki_broker_bulgaria">
                 <img src="./assets/images/footer-tg.svg" alt="telegram link" />
               </a>
               <a href="#">
