--- a/catalog.html
+++ b/catalog.html
@@ -18,32 +18,32 @@
     <title>Egoist - Catalog page</title>
   </head>
   <body>
-     <header class="header">
+      <header class="header">
       <div class="container">
         <div class="header__content">
           <div class="header__start">
-            <a href="/" class="header__logo">
+            <a href="#" class="header__logo">
               <img src="./assets/images/logo.svg" alt="Egoist logo" />
             </a>
             <nav class="header__menu">
               <ul class="header__menu_list">
                 <li class="header__menu_item">
-                  <a class="header__menu_link" href="/">главная</a>
+                  <a class="header__menu_link" href="#">главная</a>
                 </li>
                 <li class="header__menu_item">
                   <a class="header__menu_link" href="./catalog.html">Каталог</a>
                 </li>
                 <li class="header__menu_item">
-                  <a class="header__menu_link" href="./about.html"
+                  <a class="header__menu_link" href="#"
                     >О компании</a
                   >
                 </li>
 
                 <li class="header__menu_item">
-                  <a class="header__menu_link" href="./blog.html">Блог</a>
+                  <a class="header__menu_link" href="#">Блог</a>
                 </li>
                 <li class="header__menu_item">
-                  <a class="header__menu_link" href="./contacts.html"
+                  <a class="header__menu_link" href="#"
                     >Контакты</a
                   >
                 </li>
@@ -58,70 +58,80 @@
             </div>
           </div>
           <div class="header__contact">
-            <a href="tel:+380676358676" class="header__contact_link">
+            <a href="https://t.me/+380676358676" target="_blank" class="header__contact_link">
               <img src="./assets/images/tg.svg" alt="" />
               <span>+38067 635 86 76</span>
             </a>
-            <a href="tel:+359878319198" class="header__contact_link">
+            <a href="https://wa.me/359878319198" target="_blank" class="header__contact_link">
               <img src="./assets/images/whatsapp.svg" alt="" />
               <span>+359 878 319 198</span>
             </a>
             <button class="header-mobile-button">
-              <img class="header-mobile-close" src="./assets/images/close-popup.svg" alt="">
-              <img class="header-mobile-burger" src="./assets/images/menu.svg" alt="">
+              <img
+                class="header-mobile-close"
+                src="./assets/images/close-popup.svg"
+                alt=""
+              />
+              <img
+                class="header-mobile-burger"
+                src="./assets/images/menu.svg"
+                alt=""
+              />
             </button>
           </div>
         </div>
       </div>
       <div class="header-mobile">
-          <div class="container">
-            <div class="header-mobile-content">
-              <div class="header-mobile-menu">
-            <ul class="header-mobile-menu-list">
-              <li class="header-mobile-menu-item">
-                <a class="header-mobile-menu-link" href="#">главная</a>
-              </li>
-              <li class="header-mobile-menu-item">
-                <a class="header-mobile-menu-link current" href="#">Каталог</a>
-              </li>
-              <li class="header-mobile-menu-item">
-                <a class="header-mobile-menu-link" href="#">О компании</a>
-              </li>
-              <li class="header-mobile-menu-item">
-                <a class="header-mobile-menu-link" href="#">Блог</a>
-              </li>
-              <li class="header-mobile-menu-item">
-                <a class="header-mobile-menu-link" href="#">Контакты</a>
-              </li>
-            </ul>
-          </div>
-         <div class="header-mobile-wrap">
-           <div class="header-mobile-lang">
-            <a class="header-mobile-lang-item current" href="#">RU</a>
-            <a class="header-mobile-lang-item" href="#">UA</a>
-            <a class="header-mobile-lang-item" href="#">BG</a>
-            <a class="header-mobile-lang-item" href="#">EN</a>
-          </div>
-          <div class="header-mobile-social">
-            <a href="#">
-              <img src="./assets/images/footer-tiktok.svg" alt="">
-            </a>
-             <a href="#">
-              <img src="./assets/images/footer-instagram.svg" alt="">
-            </a>
-             <a href="#">
-              <img src="./assets/images/footer-facebook.svg" alt="">
-            </a>
-             <a href="#">
-              <img src="./assets/images/footer-tg.svg" alt="">
-            </a>
-             <a href="#">
-              <img src="./assets/images/footer-whatsapp.svg" alt="">
-            </a>
-          </div>
-         </div>
+        <div class="container">
+          <div class="header-mobile-content">
+            <div class="header-mobile-menu">
+              <ul class="header-mobile-menu-list">
+                <li class="header-mobile-menu-item">
+                  <a class="header-mobile-menu-link" href="#">главная</a>
+                </li>
+                <li class="header-mobile-menu-item">
+                  <a class="header-mobile-menu-link current" href="#"
+                    >Каталог</a
+                  >
+                </li>
+                <li class="header-mobile-menu-item">
+                  <a class="header-mobile-menu-link" href="#">О компании</a>
+                </li>
+                <li class="header-mobile-menu-item">
+                  <a class="header-mobile-menu-link" href="#">Блог</a>
+                </li>
+                <li class="header-mobile-menu-item">
+                  <a class="header-mobile-menu-link" href="#">Контакты</a>
+                </li>
+              </ul>
+            </div>
+            <div class="header-mobile-wrap">
+              <div class="header-mobile-lang">
+                <a class="header-mobile-lang-item current" href="#">RU</a>
+                <a class="header-mobile-lang-item" href="#">UA</a>
+                <a class="header-mobile-lang-item" href="#">BG</a>
+                <a class="header-mobile-lang-item" href="#">EN</a>
+              </div>
+              <div class="header-mobile-social">
+                <a href="#">
+                  <img src="./assets/images/footer-tiktok.svg" alt="" />
+                </a>
+                <a href="#">
+                  <img src="./assets/images/footer-instagram.svg" alt="" />
+                </a>
+                <a href="#">
+                  <img src="./assets/images/footer-facebook.svg" alt="" />
+                </a>
+                <a href="#">
+                  <img src="./assets/images/footer-tg.svg" alt="" />
+                </a>
+                <a href="#">
+                  <img src="./assets/images/footer-whatsapp.svg" alt="" />
+                </a>
+              </div>
             </div>
           </div>
+        </div>
       </div>
     </header> 
 
@@ -178,7 +188,8 @@
               </div>
               <div class="catalog-filter-dropdown">
                 <div class="catalog-filter-variants">
-                  <div class="catalog-filter-variant active">Студия</div>
+                  <div class="catalog-filter-variant active">Все</div>
+                  <div class="catalog-filter-variant">Студия</div>
                   <div class="catalog-filter-variant">Студия + спальня</div>
                   <div class="catalog-filter-variant">Студия + 2 спальни</div>
                   <div class="catalog-filter-variant">Студия + 3 спальни</div>
@@ -250,7 +261,8 @@
               </div>
               <div class="catalog-filter-dropdown">
                 <div class="catalog-filter-variants">
-                  <div class="catalog-filter-variant active">Партер</div>
+                  <div class="catalog-filter-variant active">Все</div>
+                  <div class="catalog-filter-variant">Партер</div>
                   <div class="catalog-filter-variant">Средние этажи</div>
                   <div class="catalog-filter-variant">Последний этаж</div>
                 </div>
@@ -263,7 +275,8 @@
               </div>
               <div class="catalog-filter-dropdown">
                 <div class="catalog-filter-variants">
-                  <div class="catalog-filter-variant active">С таксой</div>
+                  <div class="catalog-filter-variant active">Все</div>
+                  <div class="catalog-filter-variant">С таксой</div>
                   <div class="catalog-filter-variant">Без таксы</div>
                 </div>
               </div>
@@ -288,7 +301,8 @@
               </div>
               <div class="catalog-filter-dropdown">
                 <div class="catalog-filter-variants">
-                  <div class="catalog-filter-variant active">До 100 м</div>
+                  <div class="catalog-filter-variant active">Все</div>
+                  <div class="catalog-filter-variant">До 100 м</div>
                   <div class="catalog-filter-variant">До 300 м</div>
                   <div class="catalog-filter-variant">До 500 м</div>
                   <div class="catalog-filter-variant">Дальше 500 м</div>
@@ -302,7 +316,8 @@
               </div>
               <div class="catalog-filter-dropdown">
                 <div class="catalog-filter-variants">
-                  <div class="catalog-filter-variant active">есть</div>
+                  <div class="catalog-filter-variant active">Все</div>
+                  <div class="catalog-filter-variant">есть</div>
                   <div class="catalog-filter-variant">нету</div>
                   <div class="catalog-filter-variant">Мебель: за доплату</div>
                 </div>
@@ -1415,6 +1430,24 @@
               </div>
             </div>
             <div class="filter-container-body">
+              <div class="filter-container-item active">Все локации</div>
+              <div class="filter-container-item">Солнечный Берег</div>
+              <div class="filter-container-item">Святой Влас</div>
+              <div class="filter-container-item">Несебр</div>
+              <div class="filter-container-item">Елените</div>
+              <div class="filter-container-item">Равда</div>
+            </div>
+          </div>
+           <div class="filter-container">
+            <div class="filter-container-top">
+              <div class="filter-container-name">Тип недвижимости</div>
+              <div class="filter-container-end">
+                <div class="filter-choice"></div>
+                <img src="./assets/images/arrow-down.svg" alt="" />
+              </div>
+            </div>
+            <div class="filter-container-body">
+              <div class="filter-container-item active">Все</div>
               <div class="filter-container-item">Студия</div>
               <div class="filter-container-item">Студия + спальня</div>
               <div class="filter-container-item">Студия + 2 спальни</div>
@@ -1483,6 +1516,7 @@
               </div>
             </div>
             <div class="filter-container-body">
+              <div class="filter-container-item active">Все</div>
               <div class="filter-container-item">Партер</div>
               <div class="filter-container-item">Средние этажи</div>
               <div class="filter-container-item">Последний этаж</div>
@@ -1497,6 +1531,7 @@
               </div>
             </div>
             <div class="filter-container-body">
+              <div class="filter-container-item active">Все</div>
               <div class="filter-container-item">С таксой</div>
               <div class="filter-container-item">Без таксы</div>
             </div>
@@ -1525,6 +1560,7 @@
               </div>
             </div>
             <div class="filter-container-body">
+              <div class="filter-container-item active">Все</div>
               <div class="filter-container-item">До 100 м</div>
               <div class="filter-container-item">До 300 м</div>
               <div class="filter-container-item">До 500 м</div>
@@ -1541,10 +1577,10 @@
               </div>
             </div>
             <div class="filter-container-body">
+              <div class="filter-container-item active">Все</div>
               <div class="filter-container-item">есть</div>
               <div class="filter-container-item">нету</div>
               <div class="filter-container-item">Мебель: за доплату</div>
-              <div class="filter-container-item">Дальше 500 м</div>
             </div>
           </div>
         </div>
@@ -1558,28 +1594,28 @@
       </div>
     </section>
 
-    <footer class="footer">
+          <footer class="footer">
       <div class="container">
         <div class="footer__content">
           <div class="footer__column">
             <nav class="footer__menu">
               <ul class="footer__menu_list">
                 <li class="footer__menu_item">
-                  <a href="./index.html" class="footer__menu_link">главная</a>
+                  <a href="#" class="footer__menu_link">главная</a>
                 </li>
                 <li class="footer__menu_item">
                   <a href="./catalog.html" class="footer__menu_link">Каталог</a>
                 </li>
                 <li class="footer__menu_item">
-                  <a href="./about.html" class="footer__menu_link"
+                  <a href="#" class="footer__menu_link"
                     >О компании</a
                   >
                 </li>
                 <li class="footer__menu_item">
-                  <a href="./blog.html" class="footer__menu_link">Блог</a>
+                  <a href="#" class="footer__menu_link">Блог</a>
                 </li>
                 <li class="footer__menu_item">
-                  <a href="./contacts.html" class="footer__menu_link"
+                  <a href="#" class="footer__menu_link"
                     >Контакты</a
                   >
                 </li>
@@ -1588,17 +1624,17 @@
           </div>
           <div class="footer__column">
             <div class="footer__contacts">
-              <a href="tel:+380676358676">+38067 635 86 76</a>
-              <a href="tel:+359878319198">+359 878 319 198</a>
+              <a target="_blank" href="https://t.me/+380676358676">+38067 635 86 76</a>
+              <a target="_blank" href="https://wa.me/359878319198">+359 878 319 198</a>
             </div>
             <div class="footer__social">
-              <a href="#">
+              <a target="_blank" href="https://www.tiktok.com/@broker_vikki_dronova?_t=ZM-90sRCZQdnFT&_r=1">
                 <img
                   src="./assets/images/footer-tiktok.svg"
                   alt="tiktok link"
                 />
               </a>
-              <a href="#">
+              <a target="_blank" href="https://www.instagram.com/vikki_brokerinbulgaria?igsh=ZzRiNTN0Y3J5Nm9o">
                 <img
                   src="./assets/images/footer-instagram.svg"
                   alt="instagram link"
@@ -1610,7 +1646,7 @@
                   alt="facebook link"
                 />
               </a>
-              <a href="#">
+              <a target="_blank" href="https://t.me/Vikki_broker_bulgaria">
                 <img src="./assets/images/footer-tg.svg" alt="telegram link" />
               </a>
               <a href="#">
@@ -1633,7 +1669,7 @@
       <div class="footer__image">
         <img src="./assets/images/fullsize-logo.svg" alt="egoist logo" />
       </div>
-    </footer>
+    </footer> 
     <script src="./assets/scripts/main.js"></script>
   </body>
 </html>
