--- a/catalog.html
+++ b/catalog.html
@@ -318,7 +318,7 @@
                 <div class="catalog-filter-variants">
                   <div class="catalog-filter-variant active">Все</div>
                   <div class="catalog-filter-variant">есть</div>
-                  <div class="catalog-filter-variant">нету</div>
+                  <div class="catalog-filter-variant">нет</div>
                   <div class="catalog-filter-variant">Мебель: за доплату</div>
                 </div>
               </div>
@@ -1579,7 +1579,7 @@
             <div class="filter-container-body">
               <div class="filter-container-item active">Все</div>
               <div class="filter-container-item">есть</div>
-              <div class="filter-container-item">нету</div>
+              <div class="filter-container-item">нет</div>
               <div class="filter-container-item">Мебель: за доплату</div>
             </div>
           </div>
@@ -1594,7 +1594,7 @@
       </div>
     </section>
 
-          <footer class="footer">
+           <footer class="footer">
       <div class="container">
         <div class="footer__content">
           <div class="footer__column">
@@ -1640,7 +1640,7 @@
                   alt="instagram link"
                 />
               </a>
-              <a href="#">
+              <a target="_blank" href="https://www.facebook.com/DesignVictoriaDronova">
                 <img
                   src="./assets/images/footer-facebook.svg"
                   alt="facebook link"
