--- a/product.html
+++ b/product.html
@@ -558,12 +558,12 @@
             </div>
 
             <div class="calc-right">
-              <p>Показательный платёж: <strong id="monthly">≈ 0 €</strong></p>
-              <p>Стоимость объекта: <span id="totalPrice">80 000 €</span></p>
-              <p>Сумма рассрочки: <span id="loanAmount">-</span></p>
-              <p>Количество кварталов: <span id="quarters">-</span></p>
-              <p>Итого по процентам: <span id="interestSum">-</span></p>
-              <p>Общая сумма выплат: <span id="totalSum">-</span></p>
+              <p>Показательный платёж <strong id="monthly">≈ 0 €</strong></p>
+              <p>Стоимость объекта <span id="totalPrice">80 000 €</span></p>
+              <p>Сумма рассрочки <span id="loanAmount">-</span></p>
+              <p>Количество кварталов <span id="quarters">-</span></p>
+              <p>Итого по процентам <span id="interestSum">-</span></p>
+              <p>Общая сумма выплат <span id="totalSum">-</span></p>
             </div>
           </div>
         </div>
@@ -1126,7 +1126,7 @@
                   alt="instagram link"
                 />
               </a>
-              <a href="#">
+              <a target="_blank" href="https://www.facebook.com/DesignVictoriaDronova">
                 <img
                   src="./assets/images/footer-facebook.svg"
                   alt="facebook link"
