--- a/product.html
+++ b/product.html
@@ -558,7 +558,7 @@
             </div>
 
             <div class="calc-right">
-              <p>Показательный платёж <strong id="monthly">≈ 0 €</strong></p>
+              <p>Поквартальный платёж <strong id="monthly">≈ 0 €</strong></p>
               <p>Стоимость объекта <span id="totalPrice">80 000 €</span></p>
               <p>Сумма рассрочки <span id="loanAmount">-</span></p>
               <p>Количество кварталов <span id="quarters">-</span></p>
