--- a/product.html
+++ b/product.html
@@ -370,7 +370,7 @@
               </div>
             </div>
             <div class="object-attribute">
-              <img class="object-attribute-icon" src="./assets/images/appartment.svg" alt="" />
+              <img class="object-attribute-icon" src="./assets/images/math.svg" alt="" />
               <div class="object-attribute-name">
                 <span>Рассрочка: да</span>
               </div>
