--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                             <a class="egoist__link egoist__link--secondary open-contact-popup" href="#">Связаться</a>
                         </div>
                     </div>
-                         <div class="hero__favorite-wrap" data-popup=".popup-wishlist-wrap">
+                         <div class="hero__favorite-wrap open-wishlist-popup">
 
                 <div class="hero__favorite favorite">
                     <div class="hero__favorite_top">
